--- a/src/download/download.css
+++ b/src/download/download.css
@@ -159,7 +159,7 @@ a
     display: block;
     margin-top: 72px;
     width: 100%;
-    background-image: url('./images/background.png');
+    background-image: url('../images/background.png');
     background-size: cover;
     background-position: 50% 50%;
     padding: 2% 0;
